--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,7 @@ hr {
     border-top-style: dotted;
     border-color: grey;
     border-width: 5px;
-    width: 300px;
+    width: 8%;
      
 }
 
